--- a/service.html
+++ b/service.html
@@ -11,202 +11,248 @@
     <title>Hotel_Celinnaya_services</title>
   </head>
   <body>
-    <!--Header   -->
+    
+<!--Header   -->
 
-    <nav class="header">
-      <div id="mainLogo">
-        <img src="SitePics/mainLogo.svg" alt="CelinnayaLogo" />
-      </div>
-      <div id="headerName">
-        <i lang="ru">Гостиница "Целинная"</i>
-        <i lang="en">Hotel "Celinnaya"</i>
-        <i lang="kz">Селіндік қонақ үйі</i>
-      </div>
-      <div id="headerInfo">
-        <i lang="ru"
-          ><span class="mapLink"
-            ><span class="compass">&#129517;</span>Республика Казахстан<br />г. Костанай,
-            <span class="avoidWrap">ул. Батурсынова, 95</span></span
-          ><br /><a href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a><br />
-          <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
-        >
-        <i lang="en"
-          >The Republic of Kazakhstan<br />Kostanay, <span class="avoidWrap">Baytursynov Street 95</span><br /><a
-            href="tel:+77076343424"
-            ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
-          ><br />
-          <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
-        >
-        <i lang="kz"
-          >Қазақстан Республикасы<br />Қостанай,<span class="avoidWrap">Байтұрсынұлы к-сі, 95</span><br /><a
-            href="tel:+77076343424"
-            ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
-          ><br />
-          <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
-        >
-      </div>
-      <div id="socials_Lang">
-        <div id="socials">
-          <button class="buttonSocial" id="whatsapp">
-            <img src="SitePics/whatsapp.svg" alt="whatsapp" />
-          </button>
-          <button class="buttonSocial" id="facebook">
-            <img src="SitePics/facebook.svg" alt="facebook" />
-          </button>
-          <button class="buttonSocial" id="instagram">
-            <img src="SitePics/instagram.svg" alt="instagram" />
-          </button>
-          <button class="buttonSocial" id="vk">
-            <img src="SitePics/vk.svg" alt="vk" />
-          </button>
-          <button class="buttonSocial" id="ok">
-            <img src="SitePics/ok-ru.svg" alt="ok" />
-          </button>
-        </div>
-        <div class="divider"></div>
-        <div id="language">
-          <button id="themeSwitcher"><img src="SitePics/theme.svg" alt="switchColorTheme" /></button>
-          <button id="ruLang" class="buttonLang" lang="ru"><img src="SitePics/ru.svg" alt="ru" /></button>
-          <button id="enLang" class="buttonLang" lang="en"><img src="sitePics/gb.svg" alt="en" /></button>
-          <button id="kzLang" class="buttonLang" lang="kz"><img src="sitePics/kz.svg" alt="kz" /></button>
-        </div>
-      </div>
-    </nav>
-
-    <!--Book Room element and navMenu-->
-
-    <div id="bookRoomContainer">
-      <i class="bookRoom" lang="ru">Забронировать номер</i>
-      <i class="bookRoom" lang="en">Book your Room</i>
-      <i class="bookRoom" lang="kz">Нөмірді брондау</i>
+<nav class="header">
+  <div id="mainLogo">
+    <img id="mainLogoImage" src="SitePics/logo.png" alt="CelinnayaLogo" />
+  </div>
+  <div id="headerName">
+    <i lang="ru">Гостиница "Целинная"</i>
+    <i lang="en">Hotel "Celinnaya"</i>
+    <i lang="kz">Селіндік қонақ үйі</i>
+  </div>
+  <div id="headerInfo">
+    <i lang="ru"
+      ><span class="mapLink"
+        ><span class="compass">&#129517;</span>Республика Казахстан<br />г. Костанай,
+        <span class="avoidWrap">ул. Батурсынова, 95</span></span
+      ><br /><a href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a><br />
+      <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
+    >
+    <i lang="en"
+      >The Republic of Kazakhstan<br />Kostanay, <span class="avoidWrap">Baytursynov Street 95</span><br /><a
+        href="tel:+77076343424"
+        ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+      ><br />
+      <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
+    >
+    <i lang="kz"
+      >Қазақстан Республикасы<br />Қостанай,<span class="avoidWrap">Байтұрсынұлы к-сі, 95</span><br /><a
+        href="tel:+77076343424"
+        ><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+      ><br />
+      <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
+    >
+  </div>
+  <div id="socials_Lang">
+    <div id="socials">
+      <button class="buttonSocial" id="whatsapp">
+        <img src="SitePics/whatsapp.svg" alt="whatsapp" />
+      </button>
+      <button class="buttonSocial" id="facebook">
+        <img src="SitePics/facebook.svg" alt="facebook" />
+      </button>
+      <button class="buttonSocial" id="instagram">
+        <img src="SitePics/instagram.svg" alt="instagram" />
+      </button>
+      <button class="buttonSocial" id="vk">
+        <img src="SitePics/vk.svg" alt="vk" />
+      </button>
+      <button class="buttonSocial" id="ok">
+        <img src="SitePics/ok-ru.svg" alt="ok" />
+      </button>
     </div>
-    <nav id="navbar">
-      <div id="navMenuContainer">
-        <div class="navMenu main" id="main">
-          <i lang="ru">Главная</i>
-          <i lang="en">Main page</i>
-          <i lang="kz">Главная</i>
-        </div>
-        <div class="navMenu rooms" id="rooms">
-          <i lang="ru">Номера</i>
-          <i lang="en">Rooms</i>
-          <i lang="kz">Бөлмелер</i>
-        </div>
-        <div class="navMenu service" id="service">
-          <i lang="ru">Услуги</i>
-          <i lang="en">Services</i>
-          <i lang="kz">Қызметтер</i>
-        </div>
-        <div class="navMenu vacancies" id="vacancies">
-          <i lang="ru">Вакансии</i>
-          <i lang="en">Vacancies</i>
-          <i lang="kz">Бос жұмыс орындары</i>
-        </div>
+    <div class="divider"></div>
+    <div id="language">
+      <button id="themeSwitcher"><img src="SitePics/theme.svg" alt="switchColorTheme" /></button>
+      <button id="ruLang" class="buttonLang" lang="ru"><img src="SitePics/ru.svg" alt="ru" /></button>
+      <button id="enLang" class="buttonLang" lang="en"><img src="sitePics/gb.svg" alt="en" /></button>
+      <button id="kzLang" class="buttonLang" lang="kz"><img src="sitePics/kz.svg" alt="kz" /></button>
+    </div>
+  </div>
+</nav>
 
-        <div class="navMenu about" id="about">
-          <i lang="ru">Как добраться</i>
-          <i lang="en">Find Us</i>
-          <i lang="kz">Біз туралы</i>
-        </div>
-      </div>
-    </nav>
+<!--Book Room element and navMenu-->
 
-    <!--Main page starting here-->
-
-    <article class="intro">
-      <h3 lang="ru">Услуги</h3>
-      <h3 lang="en">Service</h3>
-      <h3 lang="kz">Селіндік қонақ үйі</h3>
-
-      <div class="imageContainer">
-        <picture class=".articlePhoto">
-          <source media="(min-width:1000px)" srcset="Main/Entrance1026.jpg" alt="Entrance1000px" />
-          <source media="(min-width:600px)" srcset="Main/Entrance640.jpg" alt="Entrance600px" />
-          <img src="Main/Entrance300.jpg" alt="Entrance" />
-        </picture>
-      </div>
-
-      <p lang="ru">Помимо проживания гостиница "Целинная" предлагает широкий спектр дополнительных услуг</p>
-      <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
-      <p lang="kz">Помимо проживания гостиница "Целинная" предлагает широкий спектр дополнительных услуг</p>
-    </article>
-    <button id="theme-switcher">Switch Theme</button>
-
-    <h3 lang="ru">Ресторан</h3>
-    <h3 lang="en">Restaraunt</h3>
-    <h3 lang="kz">ресторан</h3>
-    <article class="roomArticle" id="lux">
-      <div class="roomPhotos">
-        <picture class="roomPhoto">
-          <img src="Rooms/Lux/_055.jpg" alt="Lux" />
-        </picture>
-      </div>
-      <div class="roomDescription">
-        <p lang="ru" class="infoDescription">
-          <mark>Описание:</mark>
-
-          В первом текстовом разделе находится описание организации или предоставляемых услуг. Тут можно упомянуть об
-          акциях, ценах, преимуществам- на выбор владельца. -текст<br />
-          -текст<br />
-          -текст<br />
-          -текст<br />
-          -текст<br />
-          .....<br />
-          <mark>Часы работы:</mark> Ежедневно с 7-00 до 22-00<br /><br />
-          <mark>Контакты:</mark> <br />
-          <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
-          ><br />
-          <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
-        </p>
-      </div>
-    </article>
-    <div class="imageGalleryPortrait">
-      <picture class="galleryPhoto">
-        <img src="Service/Restaurant/WhatsApp Image 2023-04-28 at 13.53.39.jpg" alt="photo1" />
-      </picture>
-      <picture class="galleryPhoto">
-        <img src="Service/Restaurant/WhatsApp Image 2023-04-28 at 13.54.07.jpg" alt="photo1" />
-      </picture>
-      <picture class="galleryPhoto">
-        <img src="Service/Restaurant/WhatsApp Image 2023-04-28 at 13.54.42.jpg" alt="photo1" />
-      </picture>
-      <picture class="galleryPhoto">
-        <img src="Service/Restaurant/WhatsApp Image 2023-04-28 at 13.55.08.jpg" alt="photo1" />
-      </picture>
-      <picture class="galleryPhoto">
-        <img src="Service/Restaurant/WhatsApp Image 2023-04-28 at 13.56.44.jpg" alt="photo1" />
-      </picture>
+<div id="bookRoomContainer" class="bookRoomLink">
+  <span class="keyEmoji">&#128273</span>
+  <i class="bookRoom" lang="ru">Забронировать номер</i>
+  <i class="bookRoom" lang="en">Book your Room</i>
+  <i class="bookRoom" lang="kz">Нөмірді брондау</i>
+</div>
+<nav id="navbar">
+  <div id="navMenuContainer">
+    <div class="navMenu main" id="main">
+      <i lang="ru">Главная</i>
+      <i lang="en">Main page</i>
+      <i lang="kz">Главная</i>
+    </div>
+    <div class="navMenu rooms" id="rooms">
+      <i lang="ru">Номера</i>
+      <i lang="en">Rooms</i>
+      <i lang="kz">Бөлмелер</i>
+    </div>
+    
+    <div class="navMenu service" id="service">
+      <i lang="ru">Услуги</i>
+      <i lang="en">Services</i>
+      <i lang="kz">Қызметтер</i>
     </div>
 
-    <h3 lang="ru">Кафе "Целинное"</h3>
-    <h3 lang="en">Restaraunt</h3>
-    <h3 lang="kz">ресторан</h3>
-    <article class="roomArticle" id="lux">
-      <div class="roomPhotos">
-        <picture class="roomPhoto">
-          <img src="Rooms/Lux/_055.jpg" alt="Lux" />
-        </picture>
-      </div>
-      <div class="roomDescription">
-        <p lang="ru" class="infoDescription">
-          <mark>Описание:</mark>
-          В первом текстовом разделе находится описание организации или предоставляемых услуг. Тут можно упомянуть об
-          акциях, ценах, преимуществам- на выбор владельца.<br />
-          <mark>Часы работы:</mark> Ежедневно с 7-00 до 22-00<br /><br />
-          <mark>Контакты:</mark> <br />
-          <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
-          ><br />
-          <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
-        </p>
-      </div>
-    </article>
+    <div class="navMenu food" id="food">
+      <i lang="ru">Питание</i>
+      <i lang="en">Food</i>
+      <i lang="kz">Бос жұмыс орындары</i>
+    </div>
+
+
+    <div class="navMenu about" id="about">
+      <i lang="ru">Как добраться</i>
+      <i lang="en">Find Us</i>
+      <i lang="kz">Біз туралы</i>
+    </div>
+  </div>
+</nav>
+
+<!--Main page starting here-->
+    <main>
+      <article class="intro">
+        <h3 lang="ru">Услуги</h3>
+        <h3 lang="en">Service</h3>
+        <h3 lang="kz">Селіндік қонақ үйі</h3>
+
+        <p lang="ru">В этом разделе Вы можете ознакомиться с дополнительными услугами, доуступными гостям гостиницы "Целинная". </p>
+        <p lang="en">Welcome to "Tselinnaya" Hotel - your home away from home in the heart of Kostanay city.</p>
+        <p lang="kz">Помимо проживания гостиница "Целинная" предлагает широкий спектр дополнительных услуг</p>
+      </article>
+
+
+      <h3 lang="ru">Конференц-зал</h3>
+      <h3 lang="en">Conference Room</h3>
+      <h3 lang="kz">ресторан</h3>
+      <article class="roomArticle" id="conferenceArticle">
+        <div class="roomPhotos">
+          <picture class="roomPhoto">
+            <img src="Service/ConferenceRoom1.jpg" alt="Conference Room Photo 1" />
+          </picture>
+        </div>
+        <div class="roomDescription">
+          <p lang="ru" class="infoDescription">
+            <mark>Аренда конференц-зала:</mark> <br />
+            Стоимость одного часа- 5000 тнг;<br />
+            Стоимость одного часа с проектором- 6000 тнг;<br />
+            Стоимость зала от 6 часов- 4000 тнг/час;<br />
+            Стоимость зала до 20 человек- 4500тнг/час;<br /><br>
+            <mark>Скидки для постоянных клиентов!</mark><br />
+            Стоимость зала-4500тнг/час;<br />
+            Стоимость зала с проектором- 5500 тнг/час;<br /><br />
+
+            <mark>Часы работы:</mark> круглосуточно<br /><br />
+            <mark>Контакты:</mark> <br />
+            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            ><br />
+            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+          </p>
+        </div>
+      </article>
+
+      <h3 lang="ru">Прачечная</h3>
+      <h3 lang="en">Laundry</h3>
+      <h3 lang="kz">ресторан</h3>
+      <article class="roomArticle" id="laundryArticle">
+        <div class="roomPhotos">
+          <picture class="roomPhoto">
+            <img src="Service/Laundry.jpg" alt="Laundry" />
+          </picture>
+        </div>
+        <div class="roomDescription">
+          <p lang="ru" class="infoDescription">
+            <mark>Описание:</mark>
+            Прачечная<br />
+            <mark>Часы работы:</mark> Ежедневно с 9-00 до 18-00<br /><br />
+            <mark>Контакты:</mark> <br />
+            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            ><br />
+            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+          </p>
+        </div>
+      </article>
+
+      <h3 lang="ru">Салон красоты</h3>
+      <h3 lang="en">Beauty Salon</h3>
+      <h3 lang="kz">ресторан</h3>
+      <article class="roomArticle" id="beautyArticle">
+        <div class="roomPhotos">
+          <picture class="roomPhoto">
+            <img src="Service/beauty.jpg" />
+          </picture>
+        </div>
+        <div class="roomDescription">
+          <p lang="ru" class="infoDescription">
+            <mark>Описание:</mark>
+            Салон красоты<br />
+            <mark>Часы работы:</mark> Ежедневно с 9-00 до 21-00<br /><br />
+            <mark>Контакты:</mark> <br />
+            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            ><br />
+            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+          </p>
+        </div>
+      </article>
+
+      <h3 lang="ru">Парикмахерская</h3>
+      <h3 lang="en">Hairdresser Room</h3>
+      <h3 lang="kz">ресторан</h3>
+      <article class="roomArticle" id="hairdresserArticle">
+        <div class="roomPhotos">
+          <picture class="roomPhoto">
+            <img src="Service/Hairdresser.jpg" alt="Hairdresser" />
+          </picture>
+        </div>
+        <div class="roomDescription">
+          <p lang="ru" class="infoDescription">
+            <mark>Описание:</mark>
+            Парикмахерская<br />
+            <mark>Часы работы:</mark> Ежедневно с 9-00 до 21-00<br /><br />
+            <mark>Контакты:</mark> <br />
+            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            ><br />
+            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+          </p>
+        </div>
+      </article>
+
+      <h3 lang="ru">Стоматологический кабинет</h3>
+      <h3 lang="en">Laundry</h3>
+      <h3 lang="kz">ресторан</h3>
+      <article class="roomArticle" id="dentistArticle">
+        <div class="roomPhotos">
+          <picture class="roomPhoto">
+            <img src="Service/Dentist.jpg" alt="Dentist" />
+          </picture>
+        </div>
+        <div class="roomDescription">
+          <p lang="ru" class="infoDescription">
+            <mark>Описание:</mark>
+            Стоматологический кабинет<br />
+            <mark>Часы работы:</mark> Ежедневно с 9-00 до 21-00<br /><br />
+            <mark>Контакты:</mark> <br />
+            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            ><br />
+            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+          </p>
+        </div>
+      </article>
+    </main>
 
     <!--footer-->
 
     <nav class="footer">
       <div id="footerElements">
         <div id="bottomLogo">
-          <img id="mainLogoBottom" src="SitePics/mainLogo.svg" />
+          <img id="mainLogoBottom" src="SitePics/logo.png" />
         </div>
 
         <ul id="bottomLinks">
@@ -223,12 +269,22 @@
             <i lang="en">Rooms</i>
             <i lang="kz">Бөлмелер</i>
           </li>
+          <li class="bottomLink bookRoomLink">
+            <i lang="ru">Бронирование номера</i>
+            <i lang="en">Room Booking</i>
+            <i lang="kz">Бөлмені брондау</i>
+          </li>
           <li class="bottomLink service">
             <i lang="ru">Услуги</i>
             <i lang="en">Services</i>
             <i lang="kz">Қызметтер</i>
           </li>
-          <li class="bottomLink vacancies">
+          <li class="bottomLink food">
+            <i lang="ru">Питание</i>
+            <i lang="en">Food</i>
+            <i lang="kz">Тамақтану</i>
+          </li>
+          <li class="bottomLink vacs">
             <i lang="ru">Вакансии</i>
             <i lang="en">Vacancies</i>
             <i lang="kz">Бос жұмыс орындары</i>
@@ -246,8 +302,8 @@
           <i class="bottomTitle" lang="kz">Селіндік қонақ үйі</i>
           <li class="contactUsBottom">
             <a href="whatsapp://send?phone=77076343424">
-              <span><img class="emojiImages" src="SitePics/instagram.svg" /></span> Whatsapp</a
-            >
+              <span><img class="emojiImages" src="SitePics/whatsapp.svg" /></span> Whatsapp
+              </a>
           </li>
           <li class="contactUsBottom">
             <a href="mailto:celinnaya@mail.ru"><span>&#128231;</span>celinnaya@mail.ru</a>
@@ -290,7 +346,7 @@
         </ul>
       </div>
 
-      <div id="copyrightNotice">Hotel_Celinnaya (c) 2023</div>
+      <div id="copyrightNotice">Hotel_Celinnaya &copy 2023</div>
     </nav>
   </body>
 </html>
